--- a/dsm-refs.bib
+++ b/dsm-refs.bib
@@ -1,46 +1,5 @@
-%% Created using Papers on Tue, 21 Aug 2012.
+%% Created using Papers on Tue, 18 Sep 2012.
 %% http://mekentosj.com/papers/
-
-@book{Hardin:2003uf,
-author = {Hardin, J and Hilbe, J},
-title = {{Generalized Estimating Equations}},
-publisher = {Chapman and Hall/CRC, London, UK},
-year = {2003}
-}
-
-@article{Marques:2003vb,
-author = {Marques, FFC and Buckland, Stephen T},
-title = {{Incorporating covariates into standard line transect analyses}},
-journal = {Biometrics},
-year = {2003},
-volume = {59},
-number = {4},
-pages = {924--935}
-}
-
-@article{Cox:1955vb,
-author = {Cox, David R},
-title = {{Some statistical methods connected with series of events}},
-journal = {Journal of the Royal Statistical Society: Series B {\ldots}},
-year = {1955}
-}
-
-@book{Seber:2002ti,
-author = {Seber, G A F},
-title = {{The Estimation of Animal Abundance and Related Parameters}},
-publisher = {Blackburn Pr},
-year = {1982}
-}
-
-@article{Johnson:2010gf,
-author = {Johnson, Devin S and Laake, Jeffrey L and Ver Hoef, Jay M},
-title = {{A model-based approach for making ecological inference from distance sampling data.}},
-journal = {Biometrics},
-year = {2010},
-volume = {66},
-number = {1},
-pages = {310--318}
-}
 
 @article{Baddeley:2000to,
 author = {Baddeley, A and Turner, R.},
@@ -49,23 +8,66 @@ journal = {Australian {\&} New Zealand Journal of Statistics},
 year = {2000},
 volume = {42},
 number = {3},
-pages = {283--322}
+pages = {283--322},
+rating = {0},
+date-added = {2012-05-29T18:55:50GMT+00:00},
+date-modified = {2012-06-05T03:43:24GMT+00:00},
+url = {http://onlinelibrary.wiley.com/doi/10.1111/1467-842X.00128/abstract},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2000/Baddeley--2000.pdf},
+file = {{Baddeley--2000.pdf:/Users/dill/Dropbox/Papers2/2000/Baddeley--2000.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/84517B79-4C59-42FF-A6E3-AD735D646120}}
 }
 
-@book{McCullagh:1989ux,
-author = {McCullagh, Peter and Nelder, John A},
-title = {{Generalized Linear Models}},
-publisher = {Chapman {\&} Hall/CRC},
-year = {1989}
+@techreport{Bravington:2010vw,
+author = {Bravington, M.V. and Hedley, Sharon L},
+title = {{Antarctic minke whale abundance from the SPLINTR model: some'reference'dataset results and'preferred'estimates from the second and third circumpolar IDCR/SOWER surveys}},
+year = {2010},
+read = {Yes},
+rating = {0},
+date-added = {2012-07-12T20:08:02GMT+00:00},
+date-modified = {2012-09-18T22:51:00GMT+00:00},
+url = {http://www.iwcoffice.org/_documents/sci_com/SC62docs/SC-62-IA12Rev.pdf},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Bravington--2010.pdf},
+file = {{Bravington--2010.pdf:/Users/dill/Dropbox/Papers2/2010/Bravington--2010.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/C6C86554-53D5-4A16-BE5A-B894AFD08CC5}}
 }
 
-@article{Jorgensen:1987vg,
-author = {J{\o}rgensen, B},
-title = {{Exponential dispersion models}},
-journal = {Journal of the Royal Statistical Society: Series B {\ldots}},
-year = {1987},
-volume = {49},
-pages = {127--162}
+@techreport{Bravington:2009vo,
+author = {Bravington, M.V. and Hedley, Sharon L},
+title = {{Antarctic minke whale abundance estimates from the second and third circumpolar IDCR/SOWER surveys using the SPLINTR model}},
+year = {2009},
+read = {Yes},
+rating = {0},
+date-added = {2012-07-12T20:08:02GMT+00:00},
+date-modified = {2012-09-18T22:51:00GMT+00:00},
+url = {http://www.iwcoffice.org/_documents/sci_com/sc61docs/SC-61-IA14.pdf},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf},
+file = {{Bravington--2009.pdf:/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/323A731F-7B00-4AAA-9BE4-96F18CCC428D}}
+}
+
+@book{Buckland:2004ts,
+author = {Buckland, Stephen T and Anderson, DR and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, L},
+title = {{Advanced Distance Sampling}},
+publisher = {Oxford University Press},
+year = {2004},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T18:02:27GMT+00:00},
+date-modified = {2012-06-19T15:34:01GMT+00:00},
+uri = {\url{papers2://publication/uuid/1B0A4642-4BC9-4EDA-8F3B-E8C43E2221B9}}
+}
+
+@book{Buckland:2001vm,
+author = {Buckland, Stephen T and Anderson, DR and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, L},
+title = {{Introduction to Distance Sampling}},
+publisher = {Oxford University Press},
+year = {2001},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T17:59:25GMT+00:00},
+date-modified = {2012-06-19T15:34:01GMT+00:00},
+uri = {\url{papers2://publication/uuid/628737E2-D98A-42CD-8546-93F1C833D11F}}
 }
 
 @article{Candy:2004tb,
@@ -74,65 +76,66 @@ title = {{Modelling catch and effort data using generalised linear models, the T
 journal = {Ccamlr Science},
 year = {2004},
 volume = {11},
-pages = {59--80}
+pages = {59--80},
+read = {Yes},
+rating = {0},
+date-added = {2012-07-09T20:12:20GMT+00:00},
+date-modified = {2012-09-18T22:49:24GMT+00:00},
+url = {http://www.ccamlr.org/ccamlr_science/Vol-11-2004/04candy.pdf},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Candy-CCAMLR_Science-2004.pdf},
+file = {{Candy-CCAMLR_Science-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Candy-CCAMLR_Science-2004.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/C3059294-39F2-44B8-84DE-BC66DA2C3835}}
 }
 
-@article{Wood:2003tc,
-author = {Wood, Simon N},
-title = {{Thin plate regression splines}},
+@book{cox1980point,
+author = {Cox, David R and Isham, V.},
+title = {{Point Processes}},
+publisher = {Chapman and Hall},
+year = {1980},
+series = {Monographs on Applied Probability and Statistics},
+pmid = {81188647},
+isbn = {9780412219108},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T18:24:23GMT+00:00},
+date-modified = {2012-09-18T23:03:02GMT+00:00},
+uri = {\url{papers2://publication/uuid/E99F20A8-EF4D-428E-8D98-4F018BB99682}}
+}
+
+@article{Cox:1955vb,
+author = {Cox, David R},
+title = {{Some statistical methods connected with series of events}},
 journal = {Journal of the Royal Statistical Society. Series B, Statistical Methodology},
-year = {2003},
-volume = {65},
+year = {1955},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T19:10:01GMT+00:00},
+date-modified = {2012-09-18T23:02:51GMT+00:00},
+abstract = {The paper deals with a number of problems of statistical analysis connected with events occurring haphazardly in space or time. The topics discussed include: tests of randomness, components of variance, the correlation between events of different types, and a ... 
+},
+url = {http://www.jstor.org/stable/10.2307/2983950},
+uri = {\url{papers2://publication/uuid/2AD44FD2-9A1C-4343-849C-4E25844F5F4C}}
+}
+
+@article{Efron:1979ha,
+author = {Efron, Bradley},
+title = {{Bootstrap methods: another look at the jackknife}},
+journal = {The Annals of Statistics},
+year = {1979},
+volume = {7},
 number = {1},
-pages = {95--114}
-}
-
-@article{Skaug:2006gs,
-author = {Skaug, Hans J},
-title = {{Markov Modulated Poisson Processes for Clustered Line Transect Data}},
-journal = {Environmental and Ecological Statistics},
-year = {2006},
-volume = {13},
-number = {2},
-pages = {199--211},
-month = jun
-}
-
-@techreport{Bravington:2009vo,
-author = {Bravington, M.V. and Hedley, Sharon L},
-title = {{Antarctic minke whale abundance estimates from the second and third circumpolar IDCR/SOWER surveys using the SPLINTR model}},
-year = {2009}
-}
-
-@book{Wood:2006wz,
-author = {Wood, Simon N},
-title = {{Generalized Additive Models: An introduction with R }},
-publisher = {Chapman {\&} Hall/CRC},
-year = {2006}
-}
-
-@book{Buckland:2001vm,
-author = {Buckland, Stephen T and Anderson, DR and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, L},
-title = {{Introduction to Distance Sampling}},
-publisher = {Oxford University Press},
-year = {2001}
-}
-
-@book{Buckland:2004ts,
-author = {Buckland, Stephen T and Anderson, DR and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, L},
-title = {{Advanced Distance Sampling}},
-publisher = {Oxford University Press},
-year = {2004}
-}
-
-@article{Hedley:2004et,
-author = {Hedley, Sharon L and Buckland, Stephen T},
-title = {{Spatial models for line transect sampling}},
-journal = {Journal of Agricultural, Biological, and Environmental Statistics},
-year = {2004},
-volume = {9},
-number = {2},
-pages = {181--199}
+pages = {1--26},
+doi = {10.1214/aos/1176344552},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T20:43:14GMT+00:00},
+date-modified = {2012-09-18T23:03:47GMT+00:00},
+abstract = {Abstract We discuss the following problem: given a random sample {\$}\ mathbf {X}=(X{\_}1, X{\_}2,\ cdots, X{\_}n) {\$} from an unknown probability distribution {\$} F {\$}, estimate the sampling distribution of some prespecified random variable {\$} R (\ mathbf {X}, F) {\$}, on the basis of ... 
+},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/1979/Efron-Ann._Statist.-1979.pdf},
+file = {{Efron-Ann._Statist.-1979.pdf:/Users/dill/Dropbox/Papers2/1979/Efron-Ann._Statist.-1979.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1214/aos/1176344552}}
 }
 
 @article{GREEN:1995dg,
@@ -142,55 +145,97 @@ journal = {Biometrika},
 year = {1995},
 volume = {82},
 number = {4},
-pages = {711--732}
+pages = {711--732},
+doi = {10.1093/biomet/82.4.711},
+language = {English},
+rating = {0},
+date-added = {2012-05-29T19:20:06GMT+00:00},
+date-modified = {2012-09-18T23:03:21GMT+00:00},
+abstract = {Abstract Markov chain Monte Carlo methods for Bayesian computation have until recently been restricted to problems where the joint distribution of all variables has a density with respect to some fixed standard underlying measure. They have therefore not been ... 
+},
+uri = {\url{papers2://publication/doi/10.1093/biomet/82.4.711}}
 }
 
-@book{cox1980point,
-author = {Cox, David R and Isham, V.},
-title = {{Point Processes}},
-publisher = {Chapman and Hall},
-year = {1980},
-series = {Monographs on Applied Probability and Statistics}
+@book{Hardin:2003uf,
+author = {Hardin, J and Hilbe, J},
+title = {{Generalized Estimating Equations}},
+publisher = {Chapman and Hall/CRC, London, UK},
+year = {2003},
+rating = {0},
+date-added = {2012-08-21T01:18:41GMT+00:00},
+date-modified = {2012-08-21T01:21:29GMT+00:00},
+uri = {\url{papers2://publication/uuid/43FAB644-EC5D-4525-A77A-00576E045BD0}}
 }
 
-@article{Williams:2006tz,
-author = {Williams, Rob and Hedley, Sharon L and Hammond, P.S.},
-title = {{Modeling distribution and abundance of Antarctic baleen whales using ships of opportunity}},
-journal = {Ecology and Society},
-year = {2006},
-volume = {11},
-number = {1},
-pages = {1}
+@article{Hedley:2004et,
+author = {Hedley, Sharon L and Buckland, Stephen T},
+title = {{Spatial models for line transect sampling}},
+journal = {Journal of Agricultural, Biological, and Environmental Statistics},
+year = {2004},
+volume = {9},
+number = {2},
+pages = {181--199},
+doi = {10.1198/1085711043578},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T18:20:26GMT+00:00},
+date-modified = {2012-09-18T23:03:30GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf},
+file = {{Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1198/1085711043578}}
 }
 
-@article{WILLIAMS:2011in,
-author = {Williams, Rob and Hedley, Sharon L and Branch, Trevor A and Bravington, Mark V and Zerbini, Alexandre N and Findlay, Ken P},
-title = {{Chilean Blue Whales as a Case Study to Illustrate Methods to Estimate Abundance and Evaluate Conservation Status of Rare Species}},
-journal = {Conservation Biology},
-year = {2011},
-volume = {25},
-number = {3},
-pages = {526--535}
-}
-
-@article{Thomas:2010cf,
-author = {Thomas, Len and Buckland, Stephen T and Rexstad, Eric A and Laake, Jeffrey L and Strindberg, Samantha and Hedley, Sharon L and Bishop, Jon RB and Marques, Tiago A and Burnham, Kenneth P},
-title = {{Distance software: design and analysis of distance sampling surveys for estimating population size}},
-journal = {Journal of Applied Ecology},
-year = {2010},
-volume = {47},
-number = {1},
-pages = {5--14}
-}
-
-@article{Wang:2007tf,
-author = {Wang, H and Ranalli, MG},
-title = {{Low-rank smoothing splines on complicated domains}},
+@article{Johnson:2010gf,
+author = {Johnson, Devin S and Laake, Jeffrey L and Ver Hoef, Jay M},
+title = {{A model-based approach for making ecological inference from distance sampling data.}},
 journal = {Biometrics},
-year = {2007},
-volume = {63},
+year = {2010},
+volume = {66},
 number = {1},
-pages = {209--217}
+pages = {310--318},
+affiliation = {National Marine Mammal Laboratory, Alaska Fisheries Science Center, NOAA National Marine Fisheries Service, Seattle, Washington 98115, USA. devin.johnson@noaa.gov},
+doi = {10.1111/j.1541-0420.2009.01265.x},
+pmid = {19459840},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T18:46:24GMT+00:00},
+date-modified = {2012-09-18T23:04:10GMT+00:00},
+abstract = {We consider a fully model-based approach for the analysis of distance sampling data. Distance sampling has been widely used to estimate abundance (or density) of animals or plants in a spatially explicit study area. There is, however, no readily available method of making statistical inference on the relationships between abundance and environmental covariates. Spatial Poisson process likelihoods can be used to simultaneously estimate detection and intensity parameters by modeling distance sampling data as a thinned spatial point process. A model-based spatial approach to distance sampling data has three main benefits: it allows complex and opportunistic transect designs to be employed, it allows estimation of abundance in small subregions, and it provides a framework to assess the effects of habitat or experimental manipulation on density. We demonstrate the model-based methodology with a small simulation study and analysis of the Dubbo weed data set. In addition, a simple ad hoc method for handling overdispersion is also proposed. The simulation study showed that the model-based approach compared favorably to conventional distance sampling methods for abundance estimation. In addition, the overdispersion correction performed adequately when the number of transects was high. Analysis of the Dubbo data set indicated a transect effect on abundance via Akaike's information criterion model selection. Further goodness-of-fit analysis, however, indicated some potential confounding of intensity with the detection function.},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Johnson-Biometrics-2010.pdf},
+file = {{Johnson-Biometrics-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Johnson-Biometrics-2010.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1111/j.1541-0420.2009.01265.x}}
+}
+
+@article{Jorgensen:1987vg,
+author = {J{\o}rgensen, B},
+title = {{Exponential dispersion models}},
+journal = {Journal of the Royal Statistical Society. Series B, Statistical Methodology},
+year = {1987},
+volume = {49},
+pages = {127--162},
+rating = {0},
+date-added = {2012-07-09T20:09:31GMT+00:00},
+date-modified = {2012-09-18T22:52:22GMT+00:00},
+uri = {\url{papers2://publication/uuid/626E6348-3011-4C95-88E0-2872D18033E7}}
+}
+
+@article{Marques:2003vb,
+author = {Marques, FFC and Buckland, Stephen T},
+title = {{Incorporating covariates into standard line transect analyses}},
+journal = {Biometrics},
+year = {2003},
+volume = {59},
+number = {4},
+pages = {924--935},
+read = {Yes},
+rating = {0},
+date-added = {2011-01-23T23:06:56GMT+00:00},
+date-modified = {2012-07-11T12:18:53GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2003/Marques-Biometrics-2003.pdf},
+file = {{Marques-Biometrics-2003.pdf:/Users/dill/Dropbox/Papers2/2003/Marques-Biometrics-2003.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/431310FD-EE0C-4EFF-BF51-19DE6D44A652}}
 }
 
 @article{Marques:2007vm,
@@ -200,22 +245,30 @@ journal = {The Auk},
 year = {2007},
 volume = {124},
 number = {4},
-pages = {1229--1243}
+pages = {1229--1243},
+read = {Yes},
+rating = {0},
+date-added = {2010-07-23T21:49:27GMT+00:00},
+date-modified = {2012-06-19T15:33:11GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2007/Marques-The_Auk-2007.pdf},
+file = {{Marques-The_Auk-2007.pdf:/Users/dill/Dropbox/Papers2/2007/Marques-The_Auk-2007.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/BA1139E9-4364-46DD-9DE2-1773FF9679E6}}
 }
 
-@techreport{Bravington:2010vw,
-author = {Bravington, M.V. and Hedley, Sharon L},
-title = {{Antarctic minke whale abundance from the SPLINTR model: some'reference'dataset results and'preferred'estimates from the second and third circumpolar IDCR/SOWER surveys}},
-year = {2010}
-}
-
-@techreport{Petersen:2011vy,
-author = {Petersen, I K and MacKenzie, M and Rexstad, EA and Wisz, M S and Fox, A D},
-title = {{Comparing pre- and post-construction distributions of long-tailed ducks Clangula hyemalis in and around the Nysted offshore wind farm, Denmark:
-a quasi-designed experiment accounting for imperfect detection, local surface features and autocorrelation}},
-year = {2011},
-number = {2011-1},
-month = sep
+@book{McCullagh:1989ux,
+author = {McCullagh, Peter and Nelder, John A},
+title = {{Generalized Linear Models}},
+publisher = {Chapman {\&} Hall/CRC},
+year = {1989},
+isbn = {9780412317606},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T19:34:30GMT+00:00},
+date-modified = {2012-06-19T15:32:55GMT+00:00},
+abstract = {An outline of generalized linear models; Models for continuous data with constant variance; Binary data; Models for polytomous data; Log-linear models; Conditional likelihoods; Models with constant coefficient of variation; Quasi-likelihood functions; Joint modelling of mean and dispersion; Models with additional non-linear parameters; Model checking; Model for survival data; Components of dispersion; Further topics.},
+url = {http://books.google.com/books?id=h9kFH2_FfBkC&printsec=frontcover&dq=mccullugh+nelder&cd=1&source=gbs_api},
+uri = {\url{papers2://publication/uuid/1E03DBA3-F2EE-4807-AFFC-053B4E1396A0}}
 }
 
 @article{Niemi:2010kx,
@@ -225,17 +278,47 @@ journal = {Journal of Agricultural, Biological, and Environmental Statistics},
 year = {2010},
 volume = {15},
 number = {3},
-pages = {327--345}
+pages = {327--345},
+doi = {10.1007/s13253-010-0024-8},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T18:36:53GMT+00:00},
+date-modified = {2012-09-18T23:04:33GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf},
+file = {{Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1007/s13253-010-0024-8}}
 }
 
-@article{Wood:2008vo,
-author = {Wood, Simon N and Bravington, Mark V and Hedley, Sharon L},
-title = {{Soap film smoothing}},
+@techreport{Petersen:2011vy,
+author = {Petersen, I K and MacKenzie, M and Rexstad, EA and Wisz, M S and Fox, A D},
+title = {{Comparing pre- and post-construction distributions of long-tailed ducks Clangula hyemalis in and around the Nysted offshore wind farm, Denmark:
+a quasi-designed experiment accounting for imperfect detection, local surface features and autocorrelation}},
+year = {2011},
+number = {2011-1},
+month = sep,
+read = {Yes},
+rating = {0},
+date-added = {2012-07-19T16:03:03GMT+00:00},
+date-modified = {2012-08-21T01:18:28GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Petersen--2011.pdf},
+file = {{Petersen--2011.pdf:/Users/dill/Dropbox/Papers2/2011/Petersen--2011.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/F2B0044D-77D4-4974-B57E-55CD381E992A}}
+}
+
+@article{Ramsay:2002uo,
+author = {Ramsay, T},
+title = {{Spline smoothing over difficult regions}},
 journal = {Journal of the Royal Statistical Society. Series B, Statistical Methodology},
-year = {2008},
-volume = {70},
-number = {5},
-pages = {931--955}
+year = {2002},
+pages = {307--319},
+read = {Yes},
+rating = {0},
+date-added = {2009-11-30T12:47:43GMT+00:00},
+date-modified = {2012-09-18T22:52:22GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2002/Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf},
+file = {{Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf:/Users/dill/Dropbox/Papers2/2002/Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/0AB944B6-72CC-4119-93DB-EB36FEB64C45}}
 }
 
 @article{Rue:2009tw,
@@ -245,15 +328,69 @@ journal = {J. R. Statist. Soc. B},
 year = {2009},
 volume = {71},
 number = {2},
-pages = {319--392}
+pages = {319--392},
+read = {Yes},
+rating = {0},
+date-added = {2011-08-24T16:43:20GMT+00:00},
+date-modified = {2012-05-29T19:55:38GMT+00:00},
+abstract = {TeX output 2009.03.07:1118},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Rue-J._R._Statist._Soc._B-2009.pdf},
+file = {{Rue-J._R._Statist._Soc._B-2009.pdf:/Users/dill/Dropbox/Papers2/2009/Rue-J._R._Statist._Soc._B-2009.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/C2352D3E-B0A8-45F7-BD65-E4EC4990D929}}
 }
 
-@article{Ramsay:2002uo,
-author = {Ramsay, T},
-title = {{Spline smoothing over difficult regions}},
-journal = {Journal of the Royal Statistical Society. Series B, Statistical Methodology},
-year = {2002},
-pages = {307--319}
+@book{Seber:2002ti,
+author = {Seber, G A F},
+title = {{The Estimation of Animal Abundance and Related Parameters}},
+publisher = {Blackburn Pr},
+year = {1982},
+isbn = {9781930665552},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T19:06:01GMT+00:00},
+date-modified = {2012-09-18T23:04:50GMT+00:00},
+abstract = {Originally published in 1982, this reprint of the second edition of The Estimation of Animal Abundance and Related Parameters has been described as the "bible" of the field.},
+url = {http://books.google.com/books?id=bnGaPQAACAAJ&dq=seber&cd=10&source=gbs_api},
+uri = {\url{papers2://publication/uuid/8BEB690D-5749-411B-8CAC-901EB9E6606C}}
+}
+
+@article{Skaug:2006gs,
+author = {Skaug, Hans J},
+title = {{Markov modulated Poisson processes for clustered line transect data}},
+journal = {Environmental and Ecological Statistics},
+year = {2006},
+volume = {13},
+number = {2},
+pages = {199--211},
+month = jun,
+doi = {10.1007/s10651-005-0006-0},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2012-01-13T17:32:49GMT+00:00},
+date-modified = {2012-09-18T23:05:01GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Skaug-Environ_Ecol_Stat-2006.pdf},
+file = {{Skaug-Environ_Ecol_Stat-2006.pdf:/Users/dill/Dropbox/Papers2/2006/Skaug-Environ_Ecol_Stat-2006.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1007/s10651-005-0006-0}}
+}
+
+@article{Thomas:2010cf,
+author = {Thomas, Len and Buckland, Stephen T and Rexstad, Eric A and Laake, Jeffrey L and Strindberg, Samantha and Hedley, Sharon L and Bishop, Jon RB and Marques, Tiago A and Burnham, Kenneth P},
+title = {{Distance software: design and analysis of distance sampling surveys for estimating population size}},
+journal = {Journal of Applied Ecology},
+year = {2010},
+volume = {47},
+number = {1},
+pages = {5--14},
+doi = {10.1111/j.1365-2664.2009.01737.x},
+read = {Yes},
+rating = {0},
+date-added = {2010-07-14T20:18:23GMT+00:00},
+date-modified = {2012-09-18T22:52:48GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf},
+file = {{Thomas-Journal_of_Applied_Ecology-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1111/j.1365-2664.2009.01737.x}}
 }
 
 @book{Thompson:2002wi,
@@ -261,16 +398,116 @@ author = {Thompson, Steven K},
 title = {{Sampling}},
 publisher = {Wiley},
 year = {2002},
-edition = {2nd}
+edition = {2nd},
+isbn = {9781118162965},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T19:49:42GMT+00:00},
+date-modified = {2012-09-18T23:05:13GMT+00:00},
+abstract = {Praise for the Second Edition "This book has never had a competitor. It is the only book that takes a broad approach to sampling . . . any good personal statistics library should include a copy of this book." --Technometrics "Well-written . . . an excellent book on an important subject. Highly recommended." --Choice "An ideal reference for scientific researchers and other professionals who use sampling." --Zentralblatt Math Features new developments in the field combined with all aspects of obtaining, interpreting, and using sample data Sampling provides an up-to-date treatment of both classical and modern sampling design and estimation methods, along with sampling methods for rare, clustered, and hard-to-detect populations. This Third Edition retains the general organization of the two previous editions, but incorporates extensive new material--sections, exercises, and examples--throughout. Inside, readers will find all-new approaches to explain the various techniques in the book; new figures to assist in better visualizing and comprehending underlying concepts such as the different sampling strategies; computing notes for sample selection, calculation of estimates, and simulations; and more. Organized into six sections, the book covers basic sampling, from simple random to unequal probability sampling; the use of auxiliary data with ratio and regression estimation; sufficient data, model, and design in practical sampling; useful designs such as stratified, cluster and systematic, multistage, double and network sampling; detectability methods for elusive populations; spatial sampling; and adaptive sampling designs. Featuring a broad range of topics, Sampling, Third Edition serves as a valuable reference on useful sampling and estimation methods for researchers in various fields of study, including biostatistics, ecology, and the health sciences. The book is also ideal for courses on statistical sampling at the upper-undergraduate and graduate levels.},
+url = {http://books.google.com/books?id=qukULxJ--QAC&printsec=frontcover&dq=intitle:sampling+inauthor:thompson&cd=1&source=gbs_api},
+uri = {\url{papers2://publication/uuid/F844F284-F8FD-45EB-B547-941C0530D788}}
 }
 
-@article{Efron:1979ha,
-author = {Efron, Bradley},
-title = {{Bootstrap Methods: Another Look at the Jackknife}},
-journal = {The Annals of Statistics},
-year = {1979},
-volume = {7},
+@article{Wang:2007tf,
+author = {Wang, H and Ranalli, MG},
+title = {{Low-rank smoothing splines on complicated domains}},
+journal = {Biometrics},
+year = {2007},
+volume = {63},
 number = {1},
-pages = {1--26}
+pages = {209--217},
+read = {Yes},
+rating = {0},
+date-added = {2009-11-30T12:48:08GMT+00:00},
+date-modified = {2012-06-03T18:09:31GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2007/Wang-Biometrics-2007.pdf},
+file = {{Wang-Biometrics-2007.pdf:/Users/dill/Dropbox/Papers2/2007/Wang-Biometrics-2007.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/4A01252F-01AE-43F8-973D-A4C579C245D2}}
+}
+
+@article{WILLIAMS:2011in,
+author = {Williams, Rob and Hedley, Sharon L and Branch, Trevor A and Bravington, Mark V and Zerbini, Alexandre N and Findlay, Ken P},
+title = {{Chilean blue whales as a case study to illustrate methods to estimate abundance and evaluate conservation status of rare species}},
+journal = {Conservation Biology},
+year = {2011},
+volume = {25},
+number = {3},
+pages = {526--535},
+doi = {10.1111/j.1523-1739.2011.01656.x},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2011-03-16T13:12:31GMT+00:00},
+date-modified = {2012-09-18T23:05:24GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf},
+file = {{Williams-Conservation_Biology-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1111/j.1523-1739.2011.01656.x}}
+}
+
+@article{Williams:2006tz,
+author = {Williams, Rob and Hedley, Sharon L and Hammond, P.S.},
+title = {{Modeling distribution and abundance of Antarctic baleen whales using ships of opportunity}},
+journal = {Ecology and Society},
+year = {2006},
+volume = {11},
+number = {1},
+pages = {1},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T18:33:18GMT+00:00},
+date-modified = {2012-09-18T23:05:30GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Williams--2006.pdf},
+file = {{Williams--2006.pdf:/Users/dill/Dropbox/Papers2/2006/Williams--2006.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/20D0DB21-3CAF-4B76-AE38-663AC0ED1433}}
+}
+
+@article{Wood:2008vo,
+author = {Wood, Simon N and Bravington, Mark V and Hedley, Sharon L},
+title = {{Soap film smoothing}},
+journal = {Journal of the Royal Statistical Society. Series B, Statistical Methodology},
+year = {2008},
+volume = {70},
+number = {5},
+pages = {931--955},
+read = {Yes},
+rating = {0},
+date-added = {2010-03-23T20:11:51GMT+00:00},
+date-modified = {2012-09-18T22:52:22GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf},
+file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/8326BCA7-727A-494B-8BAD-11AC5255B783}}
+}
+
+@book{Wood:2006wz,
+author = {Wood, Simon N},
+title = {{Generalized Additive Models: An introduction with R }},
+publisher = {Chapman {\&} Hall/CRC},
+year = {2006},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T17:55:29GMT+00:00},
+date-modified = {2012-08-20T13:42:32GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Wood--2006.pdf},
+file = {{Wood--2006.pdf:/Users/dill/Dropbox/Papers2/2006/Wood--2006.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/0F51C4D6-4E84-4A13-933F-42596D681835}}
+}
+
+@article{Wood:2003tc,
+author = {Wood, Simon N},
+title = {{Thin plate regression splines}},
+journal = {Journal of the Royal Statistical Society. Series B, Statistical Methodology},
+year = {2003},
+volume = {65},
+number = {1},
+pages = {95--114},
+read = {Yes},
+rating = {0},
+date-added = {2009-11-30T12:47:43GMT+00:00},
+date-modified = {2012-09-18T22:52:22GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2003/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf},
+file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf:/Users/dill/Dropbox/Papers2/2003/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/34D20AF3-652A-4D99-B96D-01D4641008B2}}
 }
 
